--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Contacto - Elegancia dorada</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+  
+  <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contacto - Elegancia dorada</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+
 <body class="bg-gradient-to-b from-yellow-100 to-yellow-300 text-gray-900 font-sans min-h-screen flex items-center justify-center">
 
   <div class="bg-white rounded-2xl shadow-xl p-8 max-w-md text-center space-y-6 border border-yellow-300">
