--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <div class="space-y-4">
       <a href="https://wa.me/573219860382" target="_blank" class="block bg-green-600 text-white py-3 rounded-xl shadow hover:bg-green-700 transition">
-        📱 Contactar por WhatsApp
+        📱 WhatsApp-Atencion al cliente
       </a>
       <a href="https://www.instagram.com/elegancia_dorada22/#" target="_blank" class="block bg-pink-500 text-white py-3 rounded-xl shadow hover:bg-pink-600 transition">
-        📸 Ver en Instagram
+        📸 Instagram
       </a>
       <a href="https://www.tiktok.com/@elegancia_dorada" target="_blank" class="block bg-black text-white py-3 rounded-xl shadow hover:bg-gray-800 transition">
-        🎵 Ver en TikTok
+        TikTok
       </a>
     </div>
 
