--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="https://www.instagram.com/elegancia_dorada22/#" target="_blank" class="block bg-pink-500 text-white py-3 rounded-xl shadow hover:bg-pink-600 transition">
         📸 Instagram
       </a>
-      <a href="https://www.tiktok.com/@elegancia_dorada" target="_blank" class="block bg-black text-white py-3 rounded-xl shadow hover:bg-gray-800 transition">
+      <a href="https://www.tiktok.com/@elegancia.dorada32?is_from_webapp=1&sender_device=pc" target="_blank" class="block bg-black text-white py-3 rounded-xl shadow hover:bg-gray-800 transition">
         TikTok
       </a>
     </div>
